# xess

./: ChangeLog  LICENSE.txt  README.md  SECURITY.md  third-party-programs.txt
doc/: xell_developer_guide_english.md  xess_fg_developer_guide_english.md  (+2 more)
samples/basic_sample/: CMakeLists.txt  DXSample.cpp  DXSample.h  DXSampleHelper.h  Main.cpp  Win32Application.cpp  basic_sample.cpp  basic_sample.h  stdafx.h  utils.cpp  utils.h
samples/basic_sample_frame_generation/: CMakeLists.txt  DXSample.cpp  DXSample.h  DXSampleHelper.h  Main.cpp  README.md  Win32Application.cpp  Win32Application.h  basic_sample.cpp  basic_sample.h  d3dx12.h  stdafx.cpp  stdafx.h
samples/basic_sample_low_latency/: CMakeLists.txt  DXSample.cpp  DXSample.h  DXSampleHelper.h  Main.cpp  README.md  Win32Application.cpp  Win32Application.h  basic_sample.cpp  basic_sample.h  stdafx.cpp  stdafx.h
samples/basic_sample_super_resolution_dx11/: CMakeLists.txt  DXSample.cpp  DXSample.h  DXSampleHelper.h  Main.cpp  README.md  Win32Application.cpp  Win32Application.h  basic_sample_d3d11.cpp  basic_sample_d3d11.h  shader_xess_sr_d3d11.hlsl  stdafx.cpp  stdafx.h
samples/basic_sample_super_resolution_dx12/: CMakeLists.txt  DXSample.cpp  DXSample.h  DXSampleHelper.h  Main.cpp  README.md  Win32Application.cpp  Win32Application.h  basic_sample_d3d12.cpp  basic_sample_d3d12.h  d3dx12.h  stdafx.cpp  stdafx.h
samples/basic_sample_super_resolution_vk/: CMakeLists.txt  CREDITS.md  LICENSE.md  README.md  triangle.cpp  utils.cpp  utils.h  vulkanexamplebase.cpp  vulkanexamplebase.h
samples/basic_sample_super_resolution_vk/base/: CommandLineParser.hpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  benchmark.hpp  camera.hpp  keycodes.hpp
samples/basic_sample_super_resolution_vk/basic_sample_shaders/glsl/triangle/: quad.frag  quad.vert  triangle.frag  triangle.vert  velocity.frag
samples/xess_demo/: CMakeLists.txt  README.md
samples/xess_demo/Assets/Particle/: particles.json
samples/xess_demo/Assets/Sponza/: README.txt
samples/xess_demo/Assets/Sponza/pbr/: chain_texture_basecolor.dds  chain_texture_normal.dds  sponza2.gltf  sponza_thorn_normal.dds
samples/xess_demo/Assets/Textures/: BRDF_LUT.dds  Blouberg_diffuseIBL.dds  README.txt
samples/xess_demo/MiniEngine/: CMakeLists.txt
samples/xess_demo/MiniEngine/Core/: BufferManager.cpp  BufferManager.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ColorBuffer.cpp  ColorBuffer.h  CommandContext.cpp  CommandContext.h  CommandListManager.h  Core.vcxproj  Core.vcxproj.filters  Display.cpp  Display.h  EngineProfiling.cpp  EngineProfiling.h  EngineTuning.cpp  EngineTuning.h  FileUtility.cpp  GameCore.cpp  GameCore.h  GameInput.cpp  GameInput.h  GpuTimeManager.cpp  GraphicsCommon.cpp  GraphicsCore.cpp  GraphicsCore.h  IExtraRenderingBuffers.cpp  IExtraRenderingBuffers.h  ImGuiModule.cpp  ImGuiModule.h  Input.cpp  Log.cpp  Log.h  MotionBlur.cpp  ParticleEffect.cpp  ParticleEffectManager.cpp  ParticleEffectManager.h  ParticleEmissionProperties.cpp  (+13 more)
samples/xess_demo/MiniEngine/Core/Shaders/: BitonicIndirectArgsCS.hlsl  CommonRS.hlsli  ImGuiPS.hlsl  ImGuiVS.hlsl  MotionBlurFinalPassCS.hlsl  MotionBlurFinalPassPS.hlsl  MotionBlurFinalPassUnpackedVelocityCS.hlsl  MotionBlurFinalPassUnpackedVelocityPS.hlsl  MotionBlurPrePassCS.hlsl  MotionBlurPrePassUnpackedVelocityCS.hlsl  ParticleEnableMaskPS.hlsl  ParticlePS.hlsl  ParticleTileCullingCS.hlsl  ParticleTileRender3CS.hlsl  ParticleTileRenderCS.hlsl  ParticleTileRenderFast3CS.hlsl  ParticleTileRenderFastDynamic3CS.hlsl  ParticleTileRenderFastLowRes3CS.hlsl  ParticleTileRenderSlowDynamic3CS.hlsl  ParticleTileRenderSlowLowRes3CS.hlsl  SharpenCS.hlsl  SharpenTAACS.hlsl
samples/xess_demo/MiniEngine/Dependencies/: dependency_versions.txt
samples/xess_demo/MiniEngine/Dependencies/DirectXMesh/: CMakeLists.txt
samples/xess_demo/MiniEngine/Dependencies/DirectXTex/: CMakeLists.txt
samples/xess_demo/MiniEngine/Dependencies/DirectXTex/DirectXTex/: DirectXTexEXR.cpp  DirectXTexP.h
samples/xess_demo/MiniEngine/Dependencies/WinPixEventRuntime/: .signature.p7s  ThirdPartyNotices.txt  WinPixEventRuntime.1.0.230302001.nupkg
samples/xess_demo/MiniEngine/Dependencies/WinPixEventRuntime/Include/WinPixEventRuntime/: PIXEventsCommon.h  pix3.h  pix3_win.h
samples/xess_demo/MiniEngine/Dependencies/zlib/: CMakeLists.txt
samples/xess_demo/MiniEngine/Model/: ConstantBuffers.h  IndexOptimizePostTransform.cpp  IndexOptimizePostTransform.h  LightManager.cpp  LightManager.h  MeshConvert.cpp  Model.cpp  Model.h  Model.vcxproj  Model.vcxproj.filters  ModelConvert.cpp  ModelLoader.cpp  ParticleEffects.cpp  ParticleEffects.h  Renderer.cpp  Renderer.h  SponzaRenderer.cpp  SponzaRenderer.h  TextureConvert.cpp  glTF.cpp  glTF.h
samples/xess_demo/MiniEngine/Model/Shaders/: BRDF.hlsli  Common.hlsli  DefaultPS.hlsl  FillLightGridCS.hlsli  LightGrid.hlsli  Lighting.hlsli  LightingPBR.hlsli  ModelViewerPS.hlsl  SkyboxPS.hlsl  SkyboxVS.hlsl
samples/xess_demo/MiniEngine/ModelConverter/: packages.config
samples/xess_demo/MiniEngine/PropertySheets/: Build.props
samples/xess_demo/MiniEngine/Tools/Scripts/ProjectTemplates/: AppTemplate.vcxproj  packages.config
samples/xess_demo/Script/: utility.cmake
samples/xess_demo/Source/: DemoApp.cpp  DemoApp.h  DemoCameraController.cpp  DemoCameraController.h  DemoExtraBuffers.cpp  DemoExtraBuffers.h  DemoGui.cpp  DemoGui.h  DemoLog.h  XeSSDemo.manifest  pch.h
samples/xess_demo/Source/XeSS/: XeSSDebug.cpp  XeSSDebug.h  XeSSJitter.cpp  XeSSJitter.h  XeSSProcess.cpp  XeSSProcess.h  XeSSRuntime.cpp  XeSSRuntime.h
samples/xess_demo/Source/XeSS/Shaders/: XeSSConvertLowResVelocityCS.hlsl  XeSSConvertLowResVelocityNDCCS.hlsl  XeSSGenerateHiResVelocityCS.hlsl  XeSSGenerateHiResVelocityNDCCS.hlsl
samples/xess_demo/Source/XeSS/Shaders/Debug/: XeSSDebugSimpleUpsamplePS.hlsl  XeSSDebugSimpleUpsampleRGBAPS.hlsl
(+382 files in other folders)
